# calclab

./: README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/brsrc/: BTypes.h
app/brsrc/bstd/: BPrintf.h  BStd.h
app/brsrc/data/: BArray.h  BList.h  BPoint.h  BVector.h
app/brsrc/debug/: BDebug.h
app/brsrc/graph/: BColor.h
app/brsrc/lib/libbplot/driver/: driver_gen.h  driver_ppm.h
app/brsrc/lib/libbplot/include/: bplot.h  bplot_driver.h  bplot_exception.h  bplot_plot_interpol.h  bplot_plot_log.h  bplot_plot_strip.h  bplot_plot_style.h  bplot_plot_symbol.h  bplot_plot_util.h  bplot_plot_version.h  bplot_stream.h
app/brsrc/math/: BMath.h
app/brsrc/sys/: BMemory.cpp  BMemory.h
app/brsrc/tools/boa/jni/: BoaScript.tab.h  BoaScriptException.h
app/brsrc/util/: BException.h  DateTime.cpp  DateTime.h  Tokenizer.h
app/src/androidTest/java/com/bstech/calclab/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: plstnd5.fnt  reference.html  reference.txt  test1.boa  test2.boa  test3.boa
app/src/main/cpp/: TaskType.h  ndk.cpp
app/src/main/java/com/bstech/calclab/: CalclabApplication.java  GlobalData.java  NdkBridge.java  TaskType.java
app/src/main/res/drawable/: color_cursor.xml
app/src/main/res/layout/: about.xml  activity_main.xml  file_manager.xml  file_manager_row.xml  fragment_graph.xml  fragment_source.xml  reference.xml
app/src/main/res/menu/: main.xml
app/src/main/res/raw/: sample1.boa
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
(+27 files in other folders)
